--- a/cmd/redcar-ctl/Cargo.toml
+++ b/cmd/redcar-ctl/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "redcard"
+name = "redcar-ctl"
 version = "0.1.0"
 authors = ["mengshi <meng1985626@163.com>"]
 edition = "2018"
@@ -7,4 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-daemon = { path = "../../daemon", version = "0.1.0" }
