--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -12,9 +12,10 @@ path = "src/lib.rs"
 
 [dependencies]
 tonic = "0.5"
-prost = "0.8"
+prost = "0.9"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
 protobuf = "~2"
 
 [build-dependencies]
 tonic-build = "0.5"
+prost-build = "0.9.0"
