--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -13,9 +13,9 @@ path = "src/lib.rs"
 [dependencies]
 tonic = "0.5"
 prost = "0.9"
+prost-types = "0.9"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
 protobuf = "~2"
 
 [build-dependencies]
 tonic-build = "0.5"
-prost-build = "0.9.0"
