--- a/.github/workflows/redcar.yml
+++ b/.github/workflows/redcar.yml
@@ -40,12 +40,23 @@ jobs:
     runs-on: ${{ matrix.os }}
     #runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: cargo build --verbose
-      with:
-        toolchain: ${{ matrix.rust }}
-        profile: minimal
-        override: true
-    - name: Run tests
-      run: cargo test --verbose
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ matrix.rust }}
+          profile: minimal
+          override: true
+      - uses: Swatinem/rust-cache@v1
+      - name: Build
+        run: make build
+      #- uses: actions/checkout@v2
+      #- name: Build
+      #  run: cargo build --verbose
+      #  with:
+      #    toolchain: ${{ matrix.rust }}
+      #    profile: minimal
+      #    override: true
+      - name: Run tests
+        run: cargo test --verbose
