--- a/cmd/redcar-ctl/Cargo.toml
+++ b/cmd/redcar-ctl/Cargo.toml
@@ -8,6 +8,5 @@ edition = "2018"
 
 [dependencies]
 client = { path = "../../client", version = "0.1.0" }
-clap = "3.0.0-beta.5"
+clap = { version = "3.0.0-rc.3", features=["derive"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
-
