--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ members = [
     "package/index",
     "package/backend",
     "package/trigger",
-    "package/utils",
+    "package/utils"
 ]
 default-members = ["cmd/redcar-server", "cmd/redcar-ctl"]
 
