--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ protobuf = "~2"
 structopt = "0.3"
 libc = "0.2"
 nix = "0.11"
-tonic = "0.5"
+tonic = { version = "0.5", features = ["transport"]}
 prost = "0.8"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
 tokio-stream = {version = "0.1", features = ["net"]}
@@ -25,7 +25,7 @@ async-stream = "0.3.2"
 futures-util = "0.3.17"
 
 [build-dependencies]
-tonic-build = "0.5"
+tonic-build = { version = "0.5", features = ["transport"]}
 
 [target.'cfg(unix)'.dependencies]
 signal = "0.6"
